
- LookNFeel and font size is now saved between sessions.

- Variable node weights

- Improved focus keeping and reliability of description text field.

- Error reports can be saved as zip files.

- Option for graph creation: If the "add node" button is selected each further click 
  adds nodes until another button is clicked. Similar option for edges. 

- Fixed: The bundled version closes the R console if the GUI is closed.

- Fixed: GUI was more prone to rounding errors
  
- Fixed: Report generation did not finished if no testing was performed beforehand.

- Experimental: Support for entangled graphs in the GUI

- Experimental: Support for adaptive studies in the GUI
    
- Experimental: Toolkit for annotating graphs (+TikZ export support of annotations)


Version 0.7-3 (16-01-2012, Rev. 1057)
=====================================

- Function "subGraph" renamed to "subgraph" to avoid conflicts with
  package graph.

- Function "replaceVariables" exported and documented.

- Corrected labels in confidence interval dialog (weights instead alpha). 

- User submitted graphs are supported.

- Improved debug information.

- Dialog for loading of R objects gets "Cancel" button.

- GPL notice is shown when the GUI is used for the first time

- The bundled version closes the R console if the GUI is closed.

- Fixed: Since 0.7-2 too much output is printed to the R console.

- Fixed: Checking for updates happend on the event dispatch thread and
  in rare cases the GUI did not respond any more as long as the method 
  was trying to connect to the server.

- Fixed: Some objects with epsilon edges from gMCP < 0.7 could not
  be updated with function updateGraphToNewClassDefinition.
  
- Fixed: Since 0.7-1 graphGUI threw an error if the parameter graph is
  a character vector and an graph object with an equal name
  already existed.
  
- In addition to the RUnit tests gMCP is now also tested by JUnit tests.

 47 files changed, 362 insertions(+), 196 deletions(-)
 
