@@ -25,6 +25,7 @@ Version 0.7-4 (??-01-2012, Rev. 1???)
 
 - Option for graph creation: If the "add node" button is selected each further click 
   adds nodes until another button is clicked. Similar option for edges. 
+  (But do not place nodes above other nodes.)
 
 - Fixed: The bundled version closes the R console if the GUI is closed.
 
